Testing fixes for UDMIS (#684)